Added WebApi Bones.

--- a/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
+++ b/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{662655CD-EA42-4076-84A0-115947270B11}</ProjectGuid>
+    <ProjectGuid>{E0C5848F-60FF-4E60-BCB6-2D8B08AEBD95}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Adform.Academy.DataTransfer.Logger</RootNamespace>
-    <AssemblyName>Adform.Academy.DataTransfer.Logger</AssemblyName>
+    <RootNamespace>Adform.Academy.DataTransfer.WebApi.Contracts</RootNamespace>
+    <AssemblyName>Adform.Academy.DataTransfer.WebApi.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,15 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILogging.cs" />
-    <Compile Include="Log4NetLogging.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Events\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
