Renamed ILogging to ILogger

--- a/src/Adform.Academy.DataTransfer.Logger/Adform.Academy.DataTransfer.Logger.csproj
+++ b/src/Adform.Academy.DataTransfer.Logger/Adform.Academy.DataTransfer.Logger.csproj
@@ -42,8 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILogging.cs" />
-    <Compile Include="Log4NetLogging.cs" />
+    <Compile Include="ILogger.cs" />
+    <Compile Include="Log4NetLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
