--- a/src/Adform.Academy.DataTransfer.Web/Adform.Academy.DataTransfer.Web.csproj
+++ b/src/Adform.Academy.DataTransfer.Web/Adform.Academy.DataTransfer.Web.csproj
@@ -110,17 +110,22 @@
   <ItemGroup>
     <Compile Include="Controllers\DatabasesController.cs" />
     <Compile Include="Controllers\ProjectListController.cs" />
-    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\DatabaseItemModel.cs" />
     <Compile Include="Models\DatabaseListModel.cs" />
+    <Compile Include="Models\ErrorMessageModel.cs" />
     <Compile Include="Models\ProjectListModel.cs" />
+    <Compile Include="Models\UserItemModel.cs" />
+    <Compile Include="Models\UserListModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataTransfer\DatabaseRequests.cs" />
     <Compile Include="Services\DataTransfer\Pinger.cs" />
     <Compile Include="Services\DataTransfer\ServiceClient.cs" />
+    <Compile Include="Services\DataTransfer\UserRequests.cs" />
+    <Compile Include="Tools\Authentication\DataTransferUserIdentity.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -137,6 +142,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Project\Databases.js" />
+    <Content Include="Scripts\Project\ItemList.js" />
+    <Content Include="Scripts\Project\UserList.js" />
     <Content Include="Scripts\Shared\ErrorModule.js" />
     <Content Include="Scripts\Shared\MenuHighlighter.js" />
     <Content Include="Scripts\Shared\PostCommand.js" />
@@ -153,6 +160,10 @@
     <Content Include="Views\Databases\Edit.cshtml" />
     <Content Include="Views\Shared\ErrorException.cshtml" />
     <Content Include="Views\Shared\ErrorPane.cshtml" />
+    <Content Include="Views\Users\Login.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Shared\ErrorMessage.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
