--- a/src/Adform.Academy.DataTransfer.Web/Web.config
+++ b/src/Adform.Academy.DataTransfer.Web/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
+    <!--<add key="aspnet:FormsAuthReturnUrlVar" value="returnUrl" />-->
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     
@@ -16,6 +17,10 @@
   </appSettings>
 
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Users/Login" timeout="2880" />
+    </authentication>
+    <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.5" />
     
     <compilation debug="true" targetFramework="4.5" />
