--- a/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
+++ b/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
@@ -32,11 +32,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Databases\DeleteDatabaseRequest.cs" />
@@ -50,12 +45,14 @@
     <Compile Include="Databases\SaveDatabaseResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Adform.Academy.DataTransfer.Core\Adform.Academy.DataTransfer.Core.csproj">
-      <Project>{CB6E0CB6-965A-42DF-93E4-5256FF2CD3E5}</Project>
-      <Name>Adform.Academy.DataTransfer.Core</Name>
-    </ProjectReference>
+    <Compile Include="Users\CheckLoginRequest.cs" />
+    <Compile Include="Users\CheckLoginResponse.cs" />
+    <Compile Include="Users\GetUserListRequest.cs" />
+    <Compile Include="Users\GetUserListResponse.cs" />
+    <Compile Include="Users\GetUserRequest.cs" />
+    <Compile Include="Users\GetUserResponse.cs" />
+    <Compile Include="Users\SaveUserRequest.cs" />
+    <Compile Include="Users\SaveUserResponse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
