--- a/src/Adform.Academy.DataTransfer.Core/Adform.Academy.DataTransfer.Core.csproj
+++ b/src/Adform.Academy.DataTransfer.Core/Adform.Academy.DataTransfer.Core.csproj
@@ -33,6 +33,10 @@
     <Reference Include="Iesi.Collections">
       <HintPath>..\..\packages\Iesi.Collections.3.2.0.1001\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
@@ -52,6 +56,7 @@
     <Compile Include="DTO\Models\Database.cs" />
     <Compile Include="DTO\Models\Filter.cs" />
     <Compile Include="DTO\Models\Project.cs" />
+    <Compile Include="DTO\Models\TableStructure.cs" />
     <Compile Include="DTO\Models\User.cs" />
     <Compile Include="DTO\NHibernate\SessionFactory.cs" />
     <Compile Include="DTO\Types\BatchStateTypes.cs" />
@@ -89,6 +94,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DTO\Mappings\Logs.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DTO\Mappings\TableStructure.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
