--- a/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
+++ b/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
@@ -42,8 +42,18 @@
     <Compile Include="Databases\GetDatabasesListResponse.cs" />
     <Compile Include="Databases\GetDatabaseStructureRequest.cs" />
     <Compile Include="Databases\GetDatabaseStructureResponse.cs" />
+    <Compile Include="ProjectExecutor\ArchiveRequest.cs" />
+    <Compile Include="ProjectExecutor\ArchiveResponse.cs" />
+    <Compile Include="ProjectExecutor\DeleteRequest.cs" />
+    <Compile Include="ProjectExecutor\DeleteResponse.cs" />
+    <Compile Include="ProjectExecutor\StartRequest.cs" />
+    <Compile Include="ProjectExecutor\StartResponse.cs" />
+    <Compile Include="Projects\DeleteProjectRequest.cs" />
+    <Compile Include="Projects\DeleteProjectResponse.cs" />
     <Compile Include="Projects\GetProjectListRequest.cs" />
     <Compile Include="Projects\GetProjectListResponse.cs" />
+    <Compile Include="Projects\GetProjectRequest.cs" />
+    <Compile Include="Projects\GetProjectResponse.cs" />
     <Compile Include="Projects\SaveProjectRequest.cs" />
     <Compile Include="Projects\SaveProjectResponse.cs" />
     <Compile Include="Projects\Types\BatchStateTypes.cs" />
