--- a/src/Adform.Academy.DataTransfer.Service.Host/App.config
+++ b/src/Adform.Academy.DataTransfer.Service.Host/App.config
@@ -8,16 +8,22 @@
   </startup>
   <appSettings>
     <add key="DataTransferServiceUrl" value="http://localhost:10001/" />
+    <!--<add key="log4net.Internal.Debug" value="true"/>-->
   </appSettings>
   <log4net>
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
+        <conversionPattern value="%message%newline" />
       </layout>
     </appender>
+    
+    <appender name="AuditToDatabaseAppender"  type="Adform.Academy.DataTransfer.Logger.DataTransferNHibernateAppender">
+    </appender>
+    
     <root>
-      <level value="INFO" />
+      <level value="ALL" />
       <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="AuditToDatabaseAppender"/>
     </root>
   </log4net>
   <connectionStrings>
