Logging in UI, Project details except progress bar.

--- a/src/Adform.Academy.DataTransfer.Service.Host/App.config
+++ b/src/Adform.Academy.DataTransfer.Service.Host/App.config
@@ -17,14 +17,15 @@
       </layout>
     </appender>
     
-    <appender name="AuditToDatabaseAppender"  type="Adform.Academy.DataTransfer.Logger.DataTransferNHibernateAppender">
+    <appender name="AuditToDatabaseAppender" type="Adform.Academy.DataTransfer.Logger.DataTransferNHibernateAppender">
     </appender>
-    
-    <root>
+   
+     <logger name="DataTransferService">
       <level value="ALL" />
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="AuditToDatabaseAppender"/>
-    </root>
+    </logger>
+   
   </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
