--- a/src/Adform.Academy.DataTransfer.Web/Adform.Academy.DataTransfer.Web.csproj
+++ b/src/Adform.Academy.DataTransfer.Web/Adform.Academy.DataTransfer.Web.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Controllers\ProjectEditorController.cs" />
     <Compile Include="Controllers\ProjectExecutorController.cs" />
     <Compile Include="Controllers\ProjectListController.cs" />
+    <Compile Include="Controllers\SystemLogController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -119,12 +120,14 @@
     <Compile Include="Models\DatabaseItemModel.cs" />
     <Compile Include="Models\DatabaseListModel.cs" />
     <Compile Include="Models\ErrorMessageModel.cs" />
+    <Compile Include="Models\SystemLogModel.cs" />
     <Compile Include="Models\ProjectEditorModel.cs" />
     <Compile Include="Models\ProjectListModel.cs" />
     <Compile Include="Models\UserItemModel.cs" />
     <Compile Include="Models\UserListModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataTransfer\DatabaseRequests.cs" />
+    <Compile Include="Services\DataTransfer\LogRequests.cs" />
     <Compile Include="Services\DataTransfer\Pinger.cs" />
     <Compile Include="Services\DataTransfer\ProjectExecutorRequests.cs" />
     <Compile Include="Services\DataTransfer\ProjectRequests.cs" />
@@ -146,6 +149,10 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\moment-with-langs.js" />
+    <Content Include="Scripts\moment-with-langs.min.js" />
+    <Content Include="Scripts\moment.js" />
+    <Content Include="Scripts\moment.min.js" />
     <Content Include="Scripts\Project\Columns.js" />
     <Content Include="Scripts\Project\Databases.js" />
     <Content Include="Scripts\Project\EditFilters.js" />
@@ -154,6 +161,7 @@
     <Content Include="Scripts\Project\ProjectList.js" />
     <Content Include="Scripts\Project\UserList.js" />
     <Content Include="Scripts\Shared\ErrorModule.js" />
+    <Content Include="Scripts\Project\LogList.js" />
     <Content Include="Scripts\Shared\MenuHighlighter.js" />
     <Content Include="Scripts\Shared\PostCommand.js" />
     <Content Include="Web.config" />
@@ -178,6 +186,8 @@
     <Content Include="Views\ProjectEditor\EditFilters.cshtml" />
     <Content Include="Views\ProjectEditor\Review.cshtml" />
     <Content Include="Views\ProjectEditor\Save.cshtml" />
+    <Content Include="Views\SystemLog\Index.cshtml" />
+    <Content Include="Views\ProjectEditor\ReviewFiltersFrame.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
