--- a/src/Adform.Academy.DataTransfer.Web/packages.config
+++ b/src/Adform.Academy.DataTransfer.Web/packages.config
@@ -14,5 +14,6 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Moment.js" version="2.6.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
 </packages>
