--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,17 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+
+*/Scripts/jquery-2.1.0.intellisense.js
+*/Scripts/jquery-2.1.0.js
+*/Scripts/jquery-2.1.0.min.js
+*/Scripts/jquery-2.1.0.min.map
+*/Scripts/jquery.validate-vsdoc.js
+*/Scripts/jquery.validate.js
+*/Scripts/jquery.validate.min.js
+*/Scripts/jquery.validate.unobtrusive.js
+*/Scripts/jquery.validate.unobtrusive.min.js
+*/Scripts/moment-with-langs.js
+*/Scripts/moment-with-langs.min.js
+*/Scripts/moment.js
+*/Scripts/moment.min.js
