--- a/src/Adform.Academy.DataTransfer.Core/packages.config
+++ b/src/Adform.Academy.DataTransfer.Core/packages.config
@@ -3,4 +3,5 @@
   <package id="Iesi.Collections" version="3.2.0.1001" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net45" />
+  <package id="Unofficial.Microsoft.SQLServer.SMO" version="11.0.3000.0" targetFramework="net45" />
 </packages>
