Lots of diagrams; bones for unfinished code

--- a/src/Adform.Academy.DataTransfer.Service.Host/App.config
+++ b/src/Adform.Academy.DataTransfer.Service.Host/App.config
@@ -18,6 +18,7 @@
     </appender>
     
     <appender name="AuditToDatabaseAppender" type="Adform.Academy.DataTransfer.Logger.DataTransferNHibernateAppender">
+      <connectionString value="Server=(local);Initial Catalog=DataTransfer;Integrated Security=SSPI" />
     </appender>
    
      <logger name="DataTransferService">
