Various diagrams fixes; implemented missing functions, required for presentation

--- a/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
+++ b/src/Adform.Academy.DataTransfer.WebApi.Contracts/Adform.Academy.DataTransfer.WebApi.Contracts.csproj
@@ -46,16 +46,22 @@
     <Compile Include="Logs\GetLogsResponse.cs" />
     <Compile Include="ProjectExecutor\ArchiveRequest.cs" />
     <Compile Include="ProjectExecutor\ArchiveResponse.cs" />
+    <Compile Include="ProjectExecutor\CancelProjectRequest.cs" />
+    <Compile Include="ProjectExecutor\CancelProjectResponse.cs" />
     <Compile Include="ProjectExecutor\ContinueRequest.cs" />
     <Compile Include="ProjectExecutor\ContinueResponse.cs" />
     <Compile Include="ProjectExecutor\DeleteRequest.cs" />
     <Compile Include="ProjectExecutor\DeleteResponse.cs" />
+    <Compile Include="ProjectExecutor\PauseProjectRequest.cs" />
+    <Compile Include="ProjectExecutor\PauseProjectResponse.cs" />
     <Compile Include="ProjectExecutor\StartRequest.cs" />
     <Compile Include="ProjectExecutor\StartResponse.cs" />
     <Compile Include="Projects\DeleteProjectRequest.cs" />
     <Compile Include="Projects\DeleteProjectResponse.cs" />
     <Compile Include="Projects\GetProjectListRequest.cs" />
     <Compile Include="Projects\GetProjectListResponse.cs" />
+    <Compile Include="Projects\GetProjectProgressRequest.cs" />
+    <Compile Include="Projects\GetProjectProgressResponse.cs" />
     <Compile Include="Projects\GetProjectRequest.cs" />
     <Compile Include="Projects\GetProjectResponse.cs" />
     <Compile Include="Projects\SaveProjectRequest.cs" />
