--- a/src/Adform.Academy.DataTransfer.Service.Host/App.config
+++ b/src/Adform.Academy.DataTransfer.Service.Host/App.config
@@ -20,9 +20,18 @@
     <appender name="AuditToDatabaseAppender" type="Adform.Academy.DataTransfer.Logger.DataTransferNHibernateAppender">
       <connectionString value="Server=(local);Initial Catalog=DataTransfer;Integrated Security=SSPI" />
     </appender>
-   
-     <logger name="DataTransferService">
+
+    <appender name="FileAppender" type="log4net.Appender.FileAppender">
+      <file value="log-file.txt" />
+      <appendToFile value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%message%newline" />
+      </layout>
+    </appender>
+
+    <logger name="DataTransferService">
       <level value="ALL" />
+      <appender-ref ref="FileAppender" />
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="AuditToDatabaseAppender" />
     </logger>
